# complaint-generator

./: .coveragerc  .gitignore  .gitmodules  AUDIT_DICT_RETURNS_REPORT.md  AUTONOMOUS_SESSION_REPORT.md  BATCH_202_PLAN.md  BATCH_254_258_SESSION_SUMMARY.md  BATCH_305_306_SESSION_SUMMARY.md  BATCH_328_API_RETURN_TYPES_SUMMARY.md  BATCH_329_EXCEPTION_HANDLING_SUMMARY.md  BENCHMARK_SUITE_SESSION_SUMMARY.md  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  EXTRACTION_PIPELINE_PROFILE_FINAL.md  ITEM_7_COMPLETION_SUMMARY.md  MCPPLUSPLUS_INTEGRATION_TODO.md  Makefile  P3_INFRASTRUCTURE_COMPLETION_SESSION.md  P3_SESSION_4_INFRASTRUCTURE_SUMMARY.md  PARALLEL_VALIDATION_FIX_REPORT.md  PERFORMANCE_OPTIMIZATION_SESSION_COMPLETE.md  PHASE_2_COMPLETION_SUMMARY.md  QUERY_OPTIMIZER_INTEGRATION_SESSION_WIP.md  QUERY_OPTIMIZER_MODULARIZATION_COMPLETION.md  README.md  README_OLD.md  README_OLD_BACKUP.md  SESSION_3_COMPLETE_SUMMARY.md  SESSION_4_QUERY_OPTIMIZER_INTEGRATION_COMPLETE.md  SESSION_84_FINAL_SUMMARY.md  SESSION_84_PHASE4_EXTENDED_SUMMARY.md  SESSION_84_PHASE4_SUMMARY.md  SESSION_84_PROGRESS.md  SESSION_SUMMARY_2024_02_24.md  SESSION_SUMMARY_2026_02_23.md  SESSION_SUMMARY_2026_02_24_COMPLETE.md  SESSION_SUMMARY_PERFORMANCE_CYCLE_2.md  SESSION_SUMMARY_PERFORMANCE_PROFILING_PROGRESS.md  TESTING.md  TODO.md  (+28 more)
adversarial_harness/: README.md  __init__.py  complainant.py  critic.py  demo_autopatch.py  harness.py  optimizer.py  search_hooks.py  seed_complaints.py  session.py
applications/: cli.py  complaint_cli.py  complaint_mcp_protocol.py  complaint_workspace.py  complaint_workspace_api.py  dashboard_ui.py  document_api.py  launcher.py  review_api.py  server.py  ui_review.py
backends/: __init__.py  huggingface.py  llm_router_backend.py  openai.py  openaibackend.py
benchmarks/: bench_sentence_window_scaling.py
complaint_analysis/: README.md  __init__.py  analyzer.py  base.py  complaint_types.py  decision_trees.py  dei_provision_extractor.py  dei_report_generator.py  dei_risk_scoring.py  indexer.py  keywords.py  legal_patterns.py  prompt_templates.py  response_parsers.py  risk_scoring.py  seed_generator.py
(+412 files in other folders)
